--- a/env.sample
+++ b/env.sample
@@ -5,7 +5,7 @@ APP_DEFAULT_NAME=Dashboard
 APP_TIMEZONE=UTC
 
 DB_HOST=localhost
-DB_DATABASE=properta
+DB_DATABASE=moneypool
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -19,5 +19,3 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
-ID_USER_SYSTEM=10
