--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,8 @@
     "font-awesome": ">=4.5.0",
     "bootstrap": "^3",
     "less": ">=2.5.3",
-    "angular-ui": ">=0.4.0"
+    "angular-ui": ">=0.4.0",
+    "angular-bootstrap": ">=1.0.3",
+    "angular-route": "^1"
   }
 }
