database structure and seeder

--- a/env.sample
+++ b/env.sample
@@ -5,9 +5,9 @@ APP_DEFAULT_NAME=Dashboard
 APP_TIMEZONE=UTC
 
 DB_HOST=localhost
-DB_DATABASE=moneypool
+DB_DATABASE=active_shipping
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 SESSION_DRIVER=database
